--- a/app/components/ui/modal/modal.css
+++ b/app/components/ui/modal/modal.css
@@ -1,7 +1,7 @@
 @reference "../../../assets/stylesheets/tailwind/engine.css";
 
   .modal {
-    @apply p-0 m-auto shadow-sm max-w-11/12 h-fit w-2xl;
+    @apply p-0 m-auto shadow-card max-w-11/12 h-fit w-2xl;
     @apply bg-card rounded-modal backdrop:bg-overlay;
   }
   .modal-page {
