--- a/app/components/ui/tooltip/tooltip.css
+++ b/app/components/ui/tooltip/tooltip.css
@@ -2,7 +2,7 @@
 
   .tooltip {
     --tooltip-bg: var(--color-gray-900);
-    @apply absolute z-20 px-3 py-2 text-xs text-center shadow-sm pointer-events-none;
+    @apply absolute z-20 px-3 py-2 text-xs text-center pointer-events-none;
     @apply text-white rounded-tooltip;
     background-color: var(--tooltip-bg);
   }
